force-app/main/default/objects/FinServ__Card__c/FinServ__Card__c.object-meta.xml
<CustomObject>
    <description>Represents client financial account associated card details</description>
    <label>Card</label>
    <nameField>
        <label>Card Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cards</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>