force-app/main/default/objects/FinServ__Card__c/fields/Available_Balance__c.field-meta.xml
<CustomField>
    <fullName>Available_Balance__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Personal Information</complianceGroup>
    <description>The balance remaining until daily spending limit is reached</description>
    <label>Available Limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>