force-app/main/default/objects/FinServ__Card__c/fields/Card_Activation_Status__c.field-meta.xml
<CustomField>
    <fullName>Card_Activation_Status__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy - Personal Information</complianceGroup>
    <label>Card Activation Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Activated</fullName>
            </value>
            <value>
                <fullName>Not Activated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>