force-app/main/default/objects/FinServ__Card__c/fields/Card_Delivery_Status__c.field-meta.xml
<CustomField>
    <fullName>Card_Delivery_Status__c</fullName>
    <complianceGroup>Integrity_Accurate</complianceGroup>
    <label>Card Delivery Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Created</fullName>
            </value>
            <value>
                <fullName>Posted</fullName>
            </value>
            <value>
                <fullName>Delivered</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>