force-app/main/default/objects/FinServ__Card__c/fields/Card_Number__c.field-meta.xml
<CustomField>
    <fullName>Card_Number__c</fullName>
    <complianceGroup>Integrity - Highly Trusted</complianceGroup>
    <label>Card Number</label>
    <length>170</length>
    <maskChar>asterisk</maskChar>
    <maskType>lastFour</maskType>
    <type>EncryptedText</type>
</CustomField>