force-app/main/default/objects/FinServ__Card__c/fields/Card_Status__c.field-meta.xml
<CustomField>
    <fullName>Card_Status__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Personal Information</complianceGroup>
    <description>The status of the card</description>
    <label>Card Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Delinquent (Return)</fullName>
            </value>
            <value>
                <fullName>Delinquent (Retain)</fullName>
            </value>
            <value>
                <fullName>Issued</fullName>
            </value>
            <value>
                <fullName>Lost</fullName>
            </value>
            <value>
                <fullName>Stolen</fullName>
            </value>
            <value>
                <fullName>Unissued (N&amp;D ICI Cards)</fullName>
            </value>
            <value>
                <fullName>Temporary (OZ Only)</fullName>
            </value>
            <value>
                <fullName>Block ATM</fullName>
            </value>
            <value>
                <fullName>Block ATM &amp; POS (Exclude CNP)</fullName>
            </value>
            <value>
                <fullName>Block ATM, POS, CNP &amp; BCH</fullName>
            </value>
            <value>
                <fullName>Block ATM, POS &amp; CNP</fullName>
            </value>
            <value>
                <fullName>Block CNP</fullName>
            </value>
            <value>
                <fullName>Block POS (exclude CNP)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>