force-app/main/default/objects/FinServ__Card__c/fields/Card_Status_Reason__c.field-meta.xml
<CustomField>
    <fullName>Card_Status_Reason__c</fullName>
    <complianceGroup>Integrity_Accurate</complianceGroup>
    <description>The status of the card</description>
    <label>Card Status Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>With PIN or Account Related</fullName>
            </value>
            <value>
                <fullName>Without PIN</fullName>
            </value>
            <value>
                <fullName>Damaged</fullName>
            </value>
            <value>
                <fullName>Last Prime debit linkage deleted</fullName>
            </value>
            <value>
                <fullName>Closed(OZ only)</fullName>
            </value>
            <value>
                <fullName>Fraud (OZ only)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>