force-app/main/default/objects/FinServ__Card__c/fields/Closed_Date__c.field-meta.xml
<CustomField>
    <fullName>Closed_Date__c</fullName>
    <complianceGroup>Integrity_Accurate</complianceGroup>
    <description>Date this card was closed</description>
    <label>Closed Date</label>
    <type>Date</type>
</CustomField>