force-app/main/default/objects/FinServ__Card__c/fields/Daily_Limit__c.field-meta.xml
<CustomField>
    <fullName>Daily_Limit__c</fullName>
    <complianceGroup>Integrity_Accurate</complianceGroup>
    <description>Card&apos;s daily spending limit</description>
    <label>Daily Limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>