force-app/main/default/objects/FinServ__Card__c/fields/Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Expiry_Date__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy - Personal Information</complianceGroup>
    <description>Date this card expires</description>
    <label>Expiry Date</label>
    <type>Date</type>
</CustomField>