force-app/main/default/objects/FinServ__Card__c/fields/FinServ__SourceSystemId__c.field-meta.xml
<CustomField>
    <fullName>FinServ__SourceSystemId__c</fullName>
    <complianceGroup>Integrity_Accurate</complianceGroup>
    <externalId>true</externalId>
    <label>Source System ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>