force-app/main/default/objects/FinServ__Card__c/fields/FinServ__ValidUntil__c.field-meta.xml
<CustomField>
    <fullName>FinServ__ValidUntil__c</fullName>
    <complianceGroup>Integrity_Highly_Trusted</complianceGroup>
    <label>Valid Until</label>
    <type>Date</type>
</CustomField>