force-app/main/default/objects/FinServ__Card__c/fields/Last_Transaction_Processed__c.field-meta.xml
<CustomField>
    <fullName>Last_Transaction_Processed__c</fullName>
    <complianceGroup>Integrity_Accurate</complianceGroup>
    <description>The date the last transaction was processed</description>
    <label>Last Transaction Processed</label>
    <type>Date</type>
</CustomField>