force-app/main/default/objects/FinServ__Card__c/fields/Limit_Type__c.field-meta.xml
<CustomField>
    <fullName>Limit_Type__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy - Personal Information</complianceGroup>
    <description>The type of limit set on this card</description>
    <label>Limit Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ATM</fullName>
            </value>
            <value>
                <fullName>POS</fullName>
            </value>
            <value>
                <fullName>Overseas</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>