force-app/main/default/objects/FinServ__Card__c/fields/Number_of_Accounts_Linked__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Accounts_Linked__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy - Personal Information</complianceGroup>
    <description>Number of accounts linked to this card</description>
    <label>Number of Accounts Linked</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>