force-app/main/default/objects/FinServ__Card__c/fields/Number_of_Card_Replacements__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Card_Replacements__c</fullName>
    <complianceGroup>Integrity_Accurate</complianceGroup>
    <description>Number of times card has been replaced</description>
    <label>Number of Card Replacements</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>