force-app/main/default/objects/FinServ__Card__c/fields/Number_of_PIN_Changes__c.field-meta.xml
<CustomField>
    <fullName>Number_of_PIN_Changes__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy - Personal Information</complianceGroup>
    <description>Number of times customer has changed PIN</description>
    <label>Number of PIN Changes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>