force-app/main/default/objects/FinServ__Card__c/fields/Number_of_PIN_Failures__c.field-meta.xml
<CustomField>
    <fullName>Number_of_PIN_Failures__c</fullName>
    <complianceGroup>Integrity_Accurate</complianceGroup>
    <description>Number of times PIN has been entered incorrectly</description>
    <label>Number of PIN Failures</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>