force-app/main/default/objects/FinServ__Card__c/fields/OCV_ID__c.field-meta.xml
<CustomField>
    <fullName>OCV_ID__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Personal Information</complianceGroup>
    <formula>FinServ__FinancialAccount__r.OCV_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OCV_ID</label>
    <type>Text</type>
</CustomField>