force-app/main/default/objects/FinServ__Card__c/fields/Pin_Set__c.field-meta.xml
<CustomField>
    <fullName>Pin_Set__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy - Personal Information</complianceGroup>
    <defaultValue>false</defaultValue>
    <label>Pin Set</label>
    <type>Checkbox</type>
</CustomField>