force-app/main/default/objects/FinServ__Card__c/fields/Temporary_Lock__c.field-meta.xml
<CustomField>
    <fullName>Temporary_Lock__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy - Personal Information</complianceGroup>
    <label>Temporary Lock</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ATM withdrawal</fullName>
            </value>
            <value>
                <fullName>Contactless</fullName>
            </value>
            <value>
                <fullName>Gambling</fullName>
            </value>
            <value>
                <fullName>Online</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>